--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -7,7 +7,7 @@
     android:gravity="center"
     android:background="@android:color/white"
     android:orientation="vertical"
-    tools:context="com.example.darionevistic.alias.ui.SplashActivity">
+    tools:context="com.example.darionevistic.alias.ui.splash.SplashActivity">
 
         <ImageView
             android:layout_width="wrap_content"
