--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,5 @@
     <color name="colorAccent">#f02f40</color>
     <color name="black_in_game">#313131</color>
     <color name="grey_c9cad2">#c9cad2</color>
+    <color name="grey_b2b2b2">#b2b2b2</color>
 </resources>
