--- a/app/src/main/res/drawable/circle_red_background.xml
+++ b/app/src/main/res/drawable/circle_red_background.xml
@@ -1,7 +1,8 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="oval">
-    <size android:height="56dp"
-        android:width="56dp"/>
+    <size
+        android:height="56dp"
+        android:width="56dp" />
 
-    <solid android:color="@color/colorPrimary"/>
+    <solid android:color="@color/colorPrimary" />
 </shape>
