--- a/app/src/main/res/drawable/rounded_black_right_8dp.xml
+++ b/app/src/main/res/drawable/rounded_black_right_8dp.xml
@@ -2,7 +2,8 @@
     android:shape="rectangle">
 
 
-    <corners android:topRightRadius="8dp"
-        android:bottomRightRadius="8dp"/>
-    <solid android:color="@color/black_in_game"/>
+    <corners
+        android:topRightRadius="8dp"
+        android:bottomRightRadius="8dp" />
+    <solid android:color="@color/black_in_game" />
 </shape>
