--- a/app/src/main/res/drawable/rounded_grey_border_8dp.xml
+++ b/app/src/main/res/drawable/rounded_grey_border_8dp.xml
@@ -1,6 +1,8 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <corners android:radius="8dp" />
-    <stroke android:color="@color/black_in_game" android:width="1dp"/>
-    <solid android:color="@android:color/transparent"/>
+    <stroke
+        android:color="@color/black_in_game"
+        android:width="1dp" />
+    <solid android:color="@android:color/transparent" />
 </shape>
