--- a/app/src/main/res/layout/fragment_main_game.xml
+++ b/app/src/main/res/layout/fragment_main_game.xml
@@ -1,14 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
+    android:layout_marginTop="30dp"
+    android:layout_marginStart="30dp"
+    android:layout_marginBottom="50dp"
     android:layout_height="match_parent">
 
-    <TextView
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/in_game_teams_recyclerview"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="This is the main fragment"
-        android:textAlignment="center"
-        android:textSize="30sp"
-        android:layout_centerInParent="true" />
+        android:layout_height="70dp" />
+
+    <TextView
+        android:id="@+id/seconds_remained"
+        android:layout_below="@id/in_game_teams_recyclerview"
+        android:textSize="46sp"
+        android:paddingEnd="30dp"
+        android:fontFamily="@font/avenir_bold"
+        android:textColor="@color/colorPrimary"
+        android:layout_marginTop="46dp"
+        android:text="60"
+       android:layout_centerHorizontal="true"
+        style="@style/wrap" />
 
 </RelativeLayout>
