--- a/app/src/main/res/layout/fragment_main_game.xml
+++ b/app/src/main/res/layout/fragment_main_game.xml
@@ -1,64 +1,91 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/in_game_teams_recyclerview"
         android:layout_width="match_parent"
-        android:layout_marginTop="30dp"
+        android:layout_height="70dp"
         android:layout_marginStart="30dp"
-        android:layout_height="70dp" />
+        android:layout_marginTop="30dp" />
 
     <TextView
         android:id="@+id/seconds_remained"
+        style="@style/wrap"
         android:layout_below="@id/in_game_teams_recyclerview"
-        android:textSize="46sp"
-        android:fontFamily="@font/avenir_bold"
-        android:textColor="@color/colorPrimary"
+        android:layout_centerHorizontal="true"
         android:layout_marginTop="46dp"
+        android:fontFamily="@font/avenir_bold"
         android:text="60"
-       android:layout_centerHorizontal="true"
-        style="@style/wrap" />
+        android:textColor="@color/colorPrimary"
+        android:textSize="46sp" />
 
-
-
-    <RelativeLayout
+    <android.support.v7.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="50dp"
-        android:layout_marginStart="50dp"
+        app:cardCornerRadius="8dp"
+        android:id="@+id/card_view"
+        app:cardBackgroundColor="@android:color/white"
+        app:cardElevation="5dp"
+        android:layout_margin="30dp"
+        android:layout_above="@+id/relative1"
+        android:layout_below="@id/seconds_remained"
+        android:orientation="vertical">
+
+        <TextView
+            android:id="@+id/in_game_word"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:singleLine="true"
+            android:maxLines="1"
+            android:textColor="@color/black_in_game"
+            android:textSize="30sp"
+            android:fontFamily="@font/avenir_bold"
+            android:textAlignment="center"
+            android:layout_gravity="center"
+            />
+
+    </android.support.v7.widget.CardView>
+
+    <RelativeLayout
+        android:id="@+id/relative1"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
         android:layout_marginBottom="50dp"
-        android:layout_alignParentBottom="true">
+        android:layout_marginEnd="50dp"
+        android:layout_marginStart="50dp">
 
         <Button
             android:id="@+id/wrong_answer_btn"
             android:layout_width="80dp"
+            android:layout_height="80dp"
             android:background="@drawable/circle_grey_background"
             android:drawableTop="@drawable/ion_sad_outline_ionicons"
             android:foreground="?android:attr/selectableItemBackground"
-            android:paddingTop="24dp"
-            android:layout_height="80dp" />
+            android:paddingTop="24dp" />
 
         <TextView
             android:id="@+id/in_game_team_points"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textColor="@color/black_in_game"
-            android:textSize="30sp"
             android:layout_centerInParent="true"
+            android:fontFamily="@font/avenir_bold"
             android:text="0"
-            android:fontFamily="@font/avenir_bold"/>
+            android:textColor="@color/black_in_game"
+            android:textSize="30sp" />
 
         <Button
             android:id="@+id/correct_answer_btn"
             android:layout_width="80dp"
+            android:layout_height="80dp"
             android:layout_alignParentEnd="true"
-            android:foreground="?android:attr/selectableItemBackground"
             android:background="@drawable/circle_red_background"
             android:drawableTop="@drawable/ion_android_happy_ionicons"
-            android:paddingTop="24dp"
-            android:layout_height="80dp" />
+            android:foreground="?android:attr/selectableItemBackground"
+            android:paddingTop="24dp" />
 
     </RelativeLayout>
 </RelativeLayout>
