--- a/app/src/main/res/layout/item_team.xml
+++ b/app/src/main/res/layout/item_team.xml
@@ -27,7 +27,9 @@
             android:background="@drawable/rounded_grey_border_8dp"
             android:imeOptions="actionDone"
             android:maxLines="1"
+            android:singleLine="true"
             android:hint="@string/team_name_hint"
+            android:selectAllOnFocus="true"
             android:paddingEnd="15dp"
             android:paddingStart="15dp"
             android:textColor="@color/black_in_game"
