--- a/app/src/main/res/layout/fragment_main_game.xml
+++ b/app/src/main/res/layout/fragment_main_game.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    android:layout_height="match_parent">
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/in_game_teams_recyclerview"
@@ -23,29 +23,28 @@
         android:textSize="46sp" />
 
     <android.support.v7.widget.CardView
+        android:id="@+id/card_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:cardCornerRadius="8dp"
-        android:id="@+id/card_view"
-        app:cardBackgroundColor="@android:color/white"
-        app:cardElevation="5dp"
-        android:layout_margin="30dp"
         android:layout_above="@+id/relative1"
         android:layout_below="@id/seconds_remained"
-        android:orientation="vertical">
+        android:layout_margin="30dp"
+        android:orientation="vertical"
+        app:cardBackgroundColor="@android:color/white"
+        app:cardCornerRadius="8dp"
+        app:cardElevation="5dp">
 
         <TextView
             android:id="@+id/in_game_word"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:singleLine="true"
-            android:maxLines="1"
-            android:textColor="@color/black_in_game"
-            android:textSize="30sp"
-            android:fontFamily="@font/avenir_bold"
-            android:textAlignment="center"
             android:layout_gravity="center"
-            />
+            android:fontFamily="@font/avenir_bold"
+            android:maxLines="1"
+            android:singleLine="true"
+            android:textAlignment="center"
+            android:textColor="@color/black_in_game"
+            android:textSize="30sp" />
 
     </android.support.v7.widget.CardView>
 
